# ECLvsCLS

./: .gitignore  README.md  pyproject.toml  rlwm_testing.ipynb  sandbox.py  utils.py
Measurements/: capacity_distribution.py
Models/: ECL.py  associator.py  categorizer.py  model.py  transforms.py
Models/Losses/: EWC.py
Simulations/: ab-ac_learning.py  association_capacity.py  association_interference.py  association_learning.py  capacity_estimator.py  capacity_fitter.py  capacity_plotting.py  excess_capacity_interference.py  generalization.py  noise_sensitivity.py  test.py
Statistics/: utils.py
Visualize/: plot_curves.py  plot_performance.py
