[tool.poetry]
name = "eclvscls"
version = "0.1.0"
description = ""
authors = ["TheLemonPig <joshua_hewson@brown.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.2"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

